# dexter

./: CMakeLists.txt  LICENSE  cmakegen-msvc-x64.cmd  conanfile.txt
.github/workflows/: build-and-run-ut.yml
include/: Definitions.h.in
include/string/: Split.h
src/: Main.cpp
src/string/: Split.cpp
test/: CMakeLists.txt  Main.cpp  StringTest.cpp
